[project]
name = "tritonbench"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "psutil>=7.2.1",
    "pynvml>=13.0.1",
    "pyyaml>=6.0.3",
    "tabulate>=0.9.0",
    "tilelang>=0.1.7.post2",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "xformers>=0.0.33.post2",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
